# MultiSelectChannels

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  main.py  manage.py  pyproject.toml  requirements.txt  test_config.py
alembic/: env.py
src/: main.py
src/clients/: __init__.py  bot_client.py  client_factory.py  user_client.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  deduplication.py  forwarding_engine.py  message_processor.py  queue_manager.py
src/database/: __init__.py  connection.py  models.py
src/handlers/: __init__.py  handler_registry.py  legacy_handlers.py  legacy_migrator.py
src/management/: __init__.py  admin_commands.py  migration_commands.py
src/migration/: __init__.py  data_validator.py  sqlite_migrator.py
src/ui/: __init__.py  keyboards.py  menus.py  state_manager.py
